added resource quotas

--- a/helm/fineract/templates/fineract-server-deployment.yml
+++ b/helm/fineract/templates/fineract-server-deployment.yml
@@ -85,3 +85,10 @@ spec:
               port: 8080
             initialDelaySeconds: 300
             timeoutSeconds: 10
+          resources:
+            requests:
+              memory: "128Mi"
+              cpu: "100m"
+            limits:
+              memory: "256Mi"
+              cpu: "200m" 
