--- a/helm/fineract/templates/fineract-ui-deployment.yml
+++ b/helm/fineract/templates/fineract-ui-deployment.yml
@@ -56,10 +56,7 @@ spec:
               port: 80
             initialDelaySeconds: 30
             timeoutSeconds: 10
+          {{- if .Values.fineractUI.resources }}
           resources:
-            requests:
-              memory: "128Mi"
-              cpu: "100m"
-            limits:
-              memory: "256Mi"
-              cpu: "200m" 
+          {{- .Values.fineractUi.resources | toYaml | nindent 10 }}
+          {{- end }}
