--- a/templates/DockerBuildAndPush.yml
+++ b/templates/DockerBuildAndPush.yml
@@ -31,7 +31,7 @@ steps:
       command: 'build'
       # Dockerfile: '**/${{ parameters.artifactName }}/${{ parameters.artifactName }}/Dockerfile'
       Dockerfile: '**/Dockerfile'
-      buildContext: ${{ parameters.artifactName }}
+      # buildContext: ${{ parameters.artifactName }}
       # tags: |
       #   latest
       tags: |      
