--- a/templates/DockerBuildAndPush.yml
+++ b/templates/DockerBuildAndPush.yml
@@ -39,39 +39,39 @@ steps:
         latest
       # arguments: '--build-arg BuildId=${{ parameters.buildId }} --build-arg PAT=${{ parameters.patMicroserviceDemoNugetsFeed }}'
   
-  - pwsh: |
-     $id=docker images --filter "label=test=${{ parameters.buildId }}" -q | Select-Object -First 1
-     docker create --name testcontainer $id
-     docker cp testcontainer:/testresults ./testresults
-     docker rm testcontainer
-    displayName: 'Copy test results' 
+  # - pwsh: |
+  #    $id=docker images --filter "label=test=${{ parameters.buildId }}" -q | Select-Object -First 1
+  #    docker create --name testcontainer $id
+  #    docker cp testcontainer:/testresults ./testresults
+  #    docker rm testcontainer
+  #   displayName: 'Copy test results'
   
-  - task: PublishTestResults@2
-    inputs:
-      testResultsFormat: 'VSTest'
-      testResultsFiles: '**/*.trx'
-      searchFolder: '$(System.DefaultWorkingDirectory)/testresults'
-    displayName: 'Publish test results'
+  # - task: PublishTestResults@2
+  #   inputs:
+  #     testResultsFormat: 'VSTest'
+  #     testResultsFiles: '**/*.trx'
+  #     searchFolder: '$(System.DefaultWorkingDirectory)/testresults'
+  #   displayName: 'Publish test results'
   
-  - task: PublishCodeCoverageResults@1
-    inputs:
-      codeCoverageTool: 'Cobertura'
-      summaryFileLocation: '$(System.DefaultWorkingDirectory)/testresults/coverage/coverage.cobertura.xml'
-      reportDirectory: '$(System.DefaultWorkingDirectory)/testresults/coverage/reports'
-    displayName: 'Publish code coverage results'
+  # - task: PublishCodeCoverageResults@1
+  #   inputs:
+  #     codeCoverageTool: 'Cobertura'
+  #     summaryFileLocation: '$(System.DefaultWorkingDirectory)/testresults/coverage/coverage.cobertura.xml'
+  #     reportDirectory: '$(System.DefaultWorkingDirectory)/testresults/coverage/reports'
+  #   displayName: 'Publish code coverage results'
 
-  - pwsh: |
-      $id=docker images --filter "label=dacpac=${{ parameters.buildId }}" -q | Select-Object -First 1
-      docker create --name dacpaccontainer $id
-      docker cp dacpaccontainer:/dacpacs $(Build.ArtifactStagingDirectory)/dacpacs
-      docker rm dacpaccontainer
-    displayName: 'Copy DACPACs'
+  # - pwsh: |
+  #     $id=docker images --filter "label=dacpac=${{ parameters.buildId }}" -q | Select-Object -First 1
+  #     docker create --name dacpaccontainer $id
+  #     docker cp dacpaccontainer:/dacpacs $(Build.ArtifactStagingDirectory)/dacpacs
+  #     docker rm dacpaccontainer
+  #   displayName: 'Copy DACPACs'
 
-  - task: PublishBuildArtifacts@1    
-    inputs:
-      PathtoPublish: '$(Build.ArtifactStagingDirectory)/dacpacs'
-      ArtifactName: 'dacpacs'    
-    displayName: 'Publish DACPAC'
+  # - task: PublishBuildArtifacts@1
+  #   inputs:
+  #     PathtoPublish: '$(Build.ArtifactStagingDirectory)/dacpacs'
+  #     ArtifactName: 'dacpacs'
+  #   displayName: 'Publish DACPAC'
 
   - task: Docker@2
     displayName: 'Push Docker Container'
