--- a/azure_pipeline-CD.yaml
+++ b/azure_pipeline-CD.yaml
@@ -49,7 +49,7 @@ variables:
   UseAadAuthentication: true
 
 # variables:  
-  # AzureSubscription: 'AzureServiceConnection' # Name of the Service Connection
+  # AzureSubscription: $(AzureSubscription) # Name of the Service Connection
   # ApiName: 'customerapi'
   # ArtifactName: 'CustomerApi'
   # ClusterResourceGroup: MicroserviceDemo
@@ -108,7 +108,7 @@ stages:
          - task: Kubernetes@1       
            inputs:
              connectionType: 'Azure Resource Manager'
-             azureSubscriptionEndpoint: 'AzureServiceConnection'
+             azureSubscriptionEndpoint: $(AzureSubscription)
              azureResourceGroup: $(ClusterResourceGroup)
              kubernetesCluster: $(KubernetesCluster)
              useClusterAdmin: true
