--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ fineract-provider/out/
 fineract-provider/config/swagger/config.json
 fineract-provider/config/swagger/fineract-input.yaml
 localtests
+
+Chart.lock
+**.tgz
