--- a/helm/fineract/templates/fineract-server-deployment.yml
+++ b/helm/fineract/templates/fineract-server-deployment.yml
@@ -57,19 +57,55 @@ spec:
                 name: {{ .Release.Name | quote }}
           env:
             - name: FINERACT_DEFAULT_TENANTDB_HOSTNAME
-              value: {{ include "mysql_host" . }}
+              value: fineract-mysql
+              # value: {{ include "mysql_host" . }}
             - name: fineract_tenants_url
-              value: {{ include "mysql_url" . }}
+              value: jdbc:mysql:thin://fineract-mysql:3306/fineract_tenants
+              # value: {{ include "mysql_url" . }}
             - name: fineract_tenants_uid
               value: {{ include "mysql_user" . }}
+              # valueFrom:
+              #   secretKeyRef:
+              #     name: fineract-tenants-db-secret
+              #     key: username
             - name: FINERACT_DEFAULT_TENANTDB_UID
               value: {{ include "mysql_user" . }}
-            {{ if .Values.fineractServer.extraEnv }}
-            {{- range $key, $value := .Values.fineractServer.extraEnv }}
-            - name: {{ $key | quote}}
-              value: {{ $value | quote }}
-            {{- end }}
-            {{- end }}
+              # valueFrom:
+              #   secretKeyRef:
+              #     name: fineract-tenants-db-secret
+              #     key: username
+            - name: fineract_tenants_pwd
+              value: {{ include "mysql_password" . }}
+              # valueFrom:
+              #   secretKeyRef:
+              #     name: fineract-tenants-db-secret
+              #     key: password
+            - name: FINERACT_DEFAULT_TENANTDB_PWD
+              value: {{ include "mysql_password" . }}
+              # valueFrom:
+              #   secretKeyRef:
+              #     name: fineract-tenants-db-secret
+              #     key: password
+            # - name: FINERACT_DEFAULT_TENANTDB_CONN_PARAMS
+            #   value: ''
+            - name: DRIVERCLASS_NAME
+              value: org.drizzle.jdbc.DrizzleDriver
+            - name: PROTOCOL
+              value: jdbc
+            - name: SUB_PROTOCOL
+              value: mysql:thin
+            # - name: node_id
+            #   value: 1
+            - name: fineract_tenants_driver
+              value: org.drizzle.jdbc.DrizzleDriver
+            - name: FINERACT_DEFAULT_TENANTDB_PORT
+              value: '3306'
+            # {{ if .Values.fineractServer.extraEnv }}
+            # {{- range $key, $value := .Values.fineractServer.extraEnv }}
+            # - name: {{ $key | quote}}
+            #   value: {{ $value | quote }}
+            # {{- end }}
+            # {{- end }}
           ports:
             - containerPort: 8080
               name: http
