--- a/helm/fineract/values.yaml
+++ b/helm/fineract/values.yaml
@@ -20,15 +20,15 @@
 fineractServer:
   replicas: 1
   image:
-    name: apache/fineract
+    name: msfmicroserviceacr.azurecr.io/fineract
     tag: latest
   # key/value pairs to pass as environment variables to the backend pods
-  extraEnv:
-    DRIVERCLASS_NAME: org.drizzle.jdbc.DrizzleDriver
-    PROTOCOL: jdbc
-    SUB_PROTOCOL: mysql:thin
-    fineract_tenants_driver: org.drizzle.jdbc.DrizzleDriver
-    FINERACT_DEFAULT_TENANTDB_PORT: "3306"
+  # extraEnv:
+  #   DRIVERCLASS_NAME: org.drizzle.jdbc.DrizzleDriver
+  #   PROTOCOL: jdbc
+  #   SUB_PROTOCOL: mysql:thin
+  #   fineract_tenants_driver: org.drizzle.jdbc.DrizzleDriver
+  #   FINERACT_DEFAULT_TENANTDB_PORT: "3306"
   # sensitive key/value pairs to pass as environment variables to the backend pods as secrets
   extraSecretEnv: {}
   resources:
@@ -85,13 +85,16 @@ service:
   type: ClusterIP
 
 ingress:
-  enabled: false
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    nginx.ingress.kubernetes.io/use-regex: "true" 
+    cert-manager.io/cluster-issuer: letsencrypt
+  path: /
+  pathType: Prefix
   hosts:
-    - chart-example.local
-  tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
+    - dev.core.mateussf.tk
+  tls:
+    - secretName: fineract-tls
+      hosts:
+        - dev.core.mateussf.tk
