--- a/templates/DockerBuildAndPush.yml
+++ b/templates/DockerBuildAndPush.yml
@@ -1,13 +1,4 @@
 parameters:
-  - name: buildId
-    type: string
-    default: 
-  # - name: patMicroserviceDemoNugetsFeed
-  #   type: string
-  #   default:
-  # - name: dockerRegistryServiceConnection
-  #   type: string
-  #   default: 
   - name: containerRegistry
     type: string
     default: 
@@ -17,20 +8,18 @@ parameters:
   - name: tag
     type: string
     default: 
-  - name: artifactName
-    type: string
-    default:
 
 steps:
   - task: Docker@2
     displayName: 'Build Docker Container'
+    workingDirectory: helm/fineract/docker
     inputs:
       # dockerRegistryServiceConnection: ${{ parameters.dockerRegistryServiceConnection }}
       containerRegistry: ${{ parameters.containerRegistry }}
       repository: ${{ parameters.repository }}
       command: 'build'
       # Dockerfile: '**/${{ parameters.artifactName }}/${{ parameters.artifactName }}/Dockerfile'
-      Dockerfile: '**/Dockerfile'
+      Dockerfile: './Dockerfile'
       # buildContext: ${{ parameters.artifactName }}
       # tags: |
       #   latest
@@ -38,56 +27,19 @@ steps:
         ${{ parameters.tag }}
         latest
       # arguments: '--build-arg BuildId=${{ parameters.buildId }} --build-arg PAT=${{ parameters.patMicroserviceDemoNugetsFeed }}'
-  
-  # - pwsh: |
-  #    $id=docker images --filter "label=test=${{ parameters.buildId }}" -q | Select-Object -First 1
-  #    docker create --name testcontainer $id
-  #    docker cp testcontainer:/testresults ./testresults
-  #    docker rm testcontainer
-  #   displayName: 'Copy test results'
-  
-  # - task: PublishTestResults@2
-  #   inputs:
-  #     testResultsFormat: 'VSTest'
-  #     testResultsFiles: '**/*.trx'
-  #     searchFolder: '$(System.DefaultWorkingDirectory)/testresults'
-  #   displayName: 'Publish test results'
-  
-  # - task: PublishCodeCoverageResults@1
-  #   inputs:
-  #     codeCoverageTool: 'Cobertura'
-  #     summaryFileLocation: '$(System.DefaultWorkingDirectory)/testresults/coverage/coverage.cobertura.xml'
-  #     reportDirectory: '$(System.DefaultWorkingDirectory)/testresults/coverage/reports'
-  #   displayName: 'Publish code coverage results'
-
-  # - pwsh: |
-  #     $id=docker images --filter "label=dacpac=${{ parameters.buildId }}" -q | Select-Object -First 1
-  #     docker create --name dacpaccontainer $id
-  #     docker cp dacpaccontainer:/dacpacs $(Build.ArtifactStagingDirectory)/dacpacs
-  #     docker rm dacpaccontainer
-  #   displayName: 'Copy DACPACs'
-
-  # - task: PublishBuildArtifacts@1
-  #   inputs:
-  #     PathtoPublish: '$(Build.ArtifactStagingDirectory)/dacpacs'
-  #     ArtifactName: 'dacpacs'
-  #   displayName: 'Publish DACPAC'
 
   - task: Docker@2
     displayName: 'Push Docker Container'
     inputs:
-      # dockerRegistryServiceConnection: ${{ parameters.dockerRegistryServiceConnection }}
       containerRegistry: ${{ parameters.containerRegistry }}
       repository: ${{ parameters.repository }}
       command: 'push'
-      # Dockerfile: '**/Dockerfile'
       tags: |      
         ${{ parameters.tag }}            
 
   - task: Docker@2
     displayName: 'Push Docker Container'
     inputs:
-      # dockerRegistryServiceConnection: ${{ parameters.dockerRegistryServiceConnection }}
       containerRegistry: ${{ parameters.containerRegistry }}
       repository: ${{ parameters.repository }}
       command: 'push'
