--- a/templates/CreateHelmPackage.yml
+++ b/templates/CreateHelmPackage.yml
@@ -36,28 +36,16 @@ parameters:
 
 steps:
 
-  - bash: ls -lha ${{ parameters.workspace }}
-    displayName: ls -lha
-
-  - bash: pwd
-    displayName: pwd
-
   - task: Tokenizer@0
     displayName: 'Run Tokenizer'
     inputs:
       sourceFilesPattern: ${{ parameters.releaseValuesFile }}
-
-  - bash: cat ${{ parameters.releaseValuesFile }}
-    displayName: cat ${{ parameters.releaseValuesFile }}
 
   - task: CopyFiles@2
     displayName: 'Copy Files to:${{ parameters.artifactStagingDirectory }}/${{ parameters.artifactName }}'
     inputs:
       Contents: ${{ parameters.releaseValuesFile }}
       TargetFolder: '${{ parameters.artifactStagingDirectory }}/${{ parameters.artifactName }}'
-
-  - bash: ls -lha '${{ parameters.artifactStagingDirectory }}'
-    displayName: ls -lha '${{ parameters.artifactStagingDirectory }}/${{ parameters.artifactName }}'
 
   - task: HelmInstaller@0
     displayName: Install Helm
@@ -68,10 +56,9 @@ steps:
       kubectlVersion: '$(kubectlVersion)'
       checkLatestKubectl: false
 
-  ####
   - script: |
       # Lint
-      helm lint helm/fineract
+      helm lint ${{ parameters.chartPath }}
     displayName: Validate Helm chart
 
   - task: HelmDeploy@0
@@ -87,12 +74,6 @@ steps:
       save: false
       updatedependency: true
 
-  - bash: ls -lha '${{ parameters.artifactStagingDirectory }}/${{ parameters.artifactName }}'
-    displayName: ls -lha
-
   - publish: '${{ parameters.artifactStagingDirectory }}/${{ parameters.artifactName }}'
     artifact: '${{ parameters.artifactName }}'
     displayName: 'Publish Artifact: ${{ parameters.artifactName }}'
-
-  - bash: ls -lha '${{ parameters.artifactStagingDirectory }}/${{ parameters.artifactName }}'
-    displayName: ls -lha
