--- a/azure_pipeline-CD.yaml
+++ b/azure_pipeline-CD.yaml
@@ -2,12 +2,9 @@ name: Fineract_$(Date:yyyyMMdd)$(Rev:.r)
 trigger: none
 
 resources:
-  # containers:
-  # - container: linuxsqlpackage
-  #   image: wolfgangofner/linuxsqlpackage:1.0
   pipelines:
-   - pipeline: thiago-Malaca.fineract-CD
-     source: thiago-Malaca.fineract-CI
+   - pipeline: fineract-CD
+     source: fineract-CI
      trigger:
       branches:
        include:
@@ -20,111 +17,21 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  AzureSubscription: 'AssinaturaAzure_c4971952' # Name of the Service Connection
-  AzureContainerRegistry: 'Azure Container Registry'
-  ApiName: 'fineract'
-  ArtifactName: 'Fineract'
-  ArtifactSourceFolder: $(ArtifactName)
-  BuildId: $(Build.BuildId)
-  BuildNumber: $(GitVersion.SemVer)
-  ClusterResourceGroup: MicroserviceDemo
-  # ChartPath: '$(ArtifactName)/$(ArtifactName)/charts/$(ApiName)'
-  # ChartPath: $(System.DefaultWorkingDirectory)/helm/fineract
-  ChartPackage: '$(Pipeline.Workspace)/Fineract/fineract-$(resources.pipeline.CustomerApiBuild.runname).tgz' 
-  # /home/vsts/work/1/a/Fineract/finteract-1.6.0-alpha.265.tgz
-
-
+  AzureSubscription: 'Azure Service Connection'
+  ClusterResourceGroup: MSF-AKS-Nao-Produtivo-RG
+  AksClusterName: msf-aks
   HelmVersion: 3.5.0
-  AcrClusterName: 'msfmicroserviceacr'
-  # ContainerRegistryName: '$(AcrClusterName).azurecr.io'
-  # RepositoryName: '$(ApiName)'
-  AksClusterName: 'microservice-aks'
-  # ReleaseValuesFile: '../values.release.yaml'
-  # ReleaseValuesFile: '$(Pipeline.Workspace)/CustomerApiBuild/CustomerApi/values.release.yaml'
+  ChartPackage: '$(Pipeline.Workspace)/fineract/fineract-$(resources.pipeline.CustomerApiBuild.runname).tgz' 
+  ReleaseValuesFile: '$(Pipeline.Workspace)/fineract/values.release.yaml' 
+  ApiName: 'fineract'
 
-  KubernetesCluster: 'microservice-aks'
-  Managedidentity-aks: managedidentity-aks
-
-  IngressEnabled: true
-  TlsSecretName: customerapi-tls
-  UseAadAuthentication: true
-
-# variables:  
-  # AzureSubscription: $(AzureSubscription) # Name of the Service Connection
-  # ApiName: 'customerapi'
-  # ArtifactName: 'CustomerApi'
-  # ClusterResourceGroup: MicroserviceDemo
-  # DatabaseName: Customer
-  # HelmVersion: 3.5.0 
-  # ServiceBusNamespaceName: microservicedemo
-  # ServiceBusQueueName: CustomerQueue
-  # ServiceBusQueueSasName: SendKey
-  # SQLServerName: wolfgangmicroservicedemosql.database.windows.net # replace with your server url  
-  
 stages:
-- stage: PR_Deploy
-  condition: startsWith(variables['resources.pipeline.CustomerApiBuild.sourcebranch'], 'refs/pull/') 
-  variables:      
-    DeploymentEnvironment: 'pr-$(prId)'
-    K8sNamespace: '$(ApiName)-$(DeploymentEnvironment)'
-    ConnectionString: "Server=tcp:$(SQLServerName),1433;Initial Catalog=$(DatabaseName)-$(DeploymentEnvironment);Persist Security Info=False;User ID=$(DbUser);Password=$(DbPassword);MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    URL: $(DeploymentEnvironment).customer.programmingwithwolfgang.com # replace with your service url     
-  jobs:
-  - deployment: Web_PR
-    environment: "customerapi-PR-Deploy" 
-    displayName: 'Deploy CustomerApi to the PR environment'    
-    strategy:
-      runOnce:
-        deploy:
-          steps:           
-          - download: CustomerApiBuild
-            artifact: $(ArtifactName)
-          - template: templates/GetPrId.yml
-          - template: templates/DeployHelmPackage.yml
-            parameters:
-              apiName: $(ApiName)
-              azureSubscription: '$(AzureSubscription)'
-              clusterResourceGroup: '$(ClusterResourceGroup)'
-              chartPackage: '$(ChartPackage)'
-              helmVersion: $(HelmVersion)
-              k8sNamespace: $(K8sNamespace)
-              kubernetesCluster: $(KubernetesCluster)
-              releaseValuesFile: '$(ReleaseValuesFile)' 
- 
-- stage: PR_Delete
-  dependsOn: PR_Deploy  
-  condition: succeeded('PR_Deploy')
+- stage: Dev     
+  # condition: startsWith(variables['resources.pipeline.CustomerApiBuild.sourcebranch'], 'refs/heads/master')
   variables:
-    K8sNamespace: '$(ApiName)-pr-$(prId)'
-  jobs:  
-  - deployment: Delete_PR_Namespace
-    environment: "customerapi-PR-Delete" 
-    displayName: Build and push Docker image and create Helm package
-    strategy:
-      runOnce:
-        deploy:
-         steps:
-         - download: none
-         - template: templates/GetPrId.yml
-         - task: Kubernetes@1       
-           inputs:
-             connectionType: 'Azure Resource Manager'
-             azureSubscriptionEndpoint: $(AzureSubscription)
-             azureResourceGroup: $(ClusterResourceGroup)
-             kubernetesCluster: $(KubernetesCluster)
-             useClusterAdmin: true
-             command: 'delete'
-             arguments: 'namespaces $(k8sNamespace)'
-           displayName: 'Delete PR namespace'
-
-- stage: Test     
-  condition: startsWith(variables['resources.pipeline.CustomerApiBuild.sourcebranch'], 'refs/heads/master')
-  variables:
-    DeploymentEnvironment: 'test'
+    DeploymentEnvironment: 'dev'
     K8sNamespace: '$(ApiName)-$(DeploymentEnvironment)'
-    ConnectionString: "Server=tcp:$(SQLServerName),1433;Initial Catalog=$(DatabaseName)-$(DeploymentEnvironment);Persist Security Info=False;User ID=$(DbUser);Password=$(DbPassword);MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    # ConnectionString: "Server=tcp:$(SQLServerName);Authentication=Active Directory Device Code Flow; Database=$(DatabaseName)-$(DeploymentEnvironment);"
-    URL: $(DeploymentEnvironment).customer.programmingwithwolfgang.com # replace with your service url
+    URL: $(DeploymentEnvironment).$(SubDomain)
   jobs:
   - deployment: Web_Test
     displayName: 'Deploy CustomerApi to the customerapi-test environment'
@@ -135,90 +42,13 @@ stages:
           steps:
           - download: CustomerApiBuild
             artifact: $(ArtifactName)
-          # - template: templates/GetServiceBusConnectionString.yml
-          #   parameters:
-          #     azureSubscription: $(AzureSubscription)
-          #     resourceGroup: $(ClusterResourceGroup)
-          #     serviceBusNamespaceName: $(ServiceBusNamespaceName)
-          #     serviceBusQueueName: $(ServiceBusQueueName)
-          #     serviceBusQueueSasName: $(ServiceBusQueueSasName)
           - template: templates/DeployHelmPackage.yml
             parameters:
-              apiName: $(ApiName)
               azureSubscription: '$(AzureSubscription)'
               clusterResourceGroup: '$(ClusterResourceGroup)'
-              chartPackage: '$(ChartPackage)'              
+              kubernetesCluster: $(AksClusterName)
               helmVersion: $(HelmVersion)
               k8sNamespace: $(K8sNamespace)
-              kubernetesCluster: $(KubernetesCluster)
+              chartPackage: '$(ChartPackage)'              
               releaseValuesFile: '$(ReleaseValuesFile)' 
- 
-  # - deployment: Database_Test
-  #   dependsOn: Web_Test    
-  #   condition: and(succeeded(), startsWith(variables['resources.pipeline.CustomerApiBuild.sourcebranch'], 'refs/heads/master'))
-  #   displayName: 'Deploy the test database'   
-  #   environment: database-test
-  #   container: linuxsqlpackage
-  #   strategy:
-  #     runOnce:
-  #       deploy:
-  #         steps:
-  #         - download: CustomerApiBuild
-  #           artifact: dacpacs
-  #         - template: templates/DatabaseDeploy.yml
-  #           parameters:          
-  #               connectionString: $(ConnectionString)
-  #               dacpacPath: "$(Pipeline.Workspace)/CustomerApiBuild/dacpacs/$(ArtifactName).Database.Build.dacpac"
-
-- stage: Prod
-  dependsOn: Test
-  condition: and(succeeded(), startsWith(variables['resources.pipeline.CustomerApiBuild.sourcebranch'], 'refs/heads/master'))
-  variables:
-    DeploymentEnvironment: 'prod'
-    K8sNamespace: '$(ApiName)-$(DeploymentEnvironment)'
-    ConnectionString: "Server=tcp:$(SQLServerName),1433;Initial Catalog=$(DatabaseName)-$(DeploymentEnvironment);Persist Security Info=False;User ID=$(DbUser);Password=$(DbPassword);MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
-    # ConnectionString: "Server=tcp:$(SQLServerName);Authentication=Active Directory Device Code Flow; Database=$(DatabaseName)-$(DeploymentEnvironment);"
-    URL: customer.programmingwithwolfgang.com # replace with your service url
-  jobs:
-  - deployment: Web_Prod
-    displayName: 'Deploy CustomerApi to the customerapi-prod environment'
-    environment: customerapi-prod
-    strategy:
-      runOnce:
-        deploy:
-          steps:
-          - download: CustomerApiBuild
-            artifact: $(ArtifactName)
-          # - template: templates/GetServiceBusConnectionString.yml
-          #   parameters:
-          #     azureSubscription: $(AzureSubscription)
-          #     resourceGroup: $(ClusterResourceGroup)
-          #     serviceBusNamespaceName: $(ServiceBusNamespaceName)
-          #     serviceBusQueueName: $(ServiceBusQueueName)
-          #     serviceBusQueueSasName: $(ServiceBusQueueSasName)
-          - template: templates/DeployHelmPackage.yml
-            parameters:
               apiName: $(ApiName)
-              azureSubscription: '$(AzureSubscription)'
-              clusterResourceGroup: '$(ClusterResourceGroup)'
-              chartPackage: '$(ChartPackage)'              
-              helmVersion: $(HelmVersion)
-              k8sNamespace: $(K8sNamespace)
-              kubernetesCluster: $(KubernetesCluster)
-              releaseValuesFile: '$(ReleaseValuesFile)' 
- 
-  # - deployment: Database_Prod
-  #   dependsOn: Web_Prod    
-  #   displayName: 'Deploy the prod database'   
-  #   environment: database-prod
-  #   container: linuxsqlpackage
-  #   strategy:
-  #     runOnce:
-  #       deploy:
-  #         steps:
-  #         - download: CustomerApiBuild
-  #           artifact: dacpacs
-  #         - template: templates/DatabaseDeploy.yml
-  #           parameters:          
-  #               connectionString: $(ConnectionString)
-  #               dacpacPath: "$(Pipeline.Workspace)/CustomerApiBuild/dacpacs/$(ArtifactName).Database.Build.dacpac"
